--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,6 +3,7 @@
     <color name="colorPrimary">#C8B600</color>
     <color name="colorPrimaryDark">#000</color>
     <color name="colorAccent">#750000</color>
+    <color name="white">#FFF</color>
 
     <color name="black_overlay">#66000000</color>
 </resources>
