--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -2,35 +2,33 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
     <group android:checkableBehavior="single">
-        <item
-            android:id="@+id/nav_camera"
-            android:icon="@drawable/ic_menu_camera"
-            android:title="Import" />
-        <item
-            android:id="@+id/nav_gallery"
-            android:icon="@drawable/ic_menu_gallery"
-            android:title="Gallery" />
-        <item
-            android:id="@+id/nav_slideshow"
-            android:icon="@drawable/ic_menu_slideshow"
-            android:title="Slideshow" />
-        <item
-            android:id="@+id/nav_manage"
-            android:icon="@drawable/ic_menu_manage"
-            android:title="Tools" />
+        <item android:title="Agenda">
+            <menu>
+                <item
+                    android:id="@+id/ver_eventos"
+                    android:icon="@drawable/ic_event_black"
+                    android:title="Ver eventos disponibles" />
+                <item
+                    android:id="@+id/crear_agenda"
+                    android:icon="@drawable/ic_map_black"
+                    android:title="Crear Agenda" />
+            </menu>
+        </item>
     </group>
 
-    <item android:title="Communicate">
-        <menu>
-            <item
-                android:id="@+id/nav_share"
-                android:icon="@drawable/ic_menu_share"
-                android:title="Share" />
-            <item
-                android:id="@+id/nav_send"
-                android:icon="@drawable/ic_menu_send"
-                android:title="Send" />
-        </menu>
-    </item>
+    <group android:checkableBehavior="single">
+        <item android:title="Servicio al cuarto">
+            <menu>
+                <item
+                    android:id="@+id/ordenar"
+                    android:icon="@drawable/ic_local_dining_black"
+                    android:title="Ordenar al cuarto" />
+                <item
+                    android:id="@+id/hablar"
+                    android:icon="@drawable/ic_phone_forwarded_black"
+                    android:title="Hablar a recepcion" />
+            </menu>
+        </item>
+    </group>
 
 </menu>
