--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -5,40 +5,17 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:paddingBottom="@dimen/activity_vertical_margin"
+    android:paddingLeft="@dimen/activity_horizontal_margin"
+    android:paddingRight="@dimen/activity_horizontal_margin"
+    android:paddingTop="@dimen/activity_vertical_margin"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context="com.ptappmovil.upiita.pt_appmovil.MainActivity"
     tools:showIn="@layout/app_bar_main">
 
-    <Button
-        android:id="@+id/icon_control"
-        android:layout_width="match_parent"
-        android:layout_height="170dp"
-        android:gravity="center"
-        android:layout_gravity="center"
-        android:background="@color/white"
-        android:textSize="40dp"
-        android:onClick="doControl" />
-
-
-    <Button
-        android:id="@+id/icon_agenda"
-        android:layout_width="match_parent"
-        android:layout_height="170dp"
-        android:gravity="center"
-        android:layout_gravity="center"
-        android:background="@color/white"
-        android:textSize="40dp"
-        android:onClick="doAgenda" />
-    <Button
-        android:id="@+id/icon_servicios"
-        android:layout_width="match_parent"
-        android:layout_height="170dp"
-        android:gravity="center"
-        android:layout_gravity="center"
-        android:background="@color/white"
-        android:textSize="40dp"
-        android:onClick="doServicios" />
-
-
+    <ListView
+        android:id="@+id/action_list"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent" />
 
 </LinearLayout>
