--- a/app/src/main/res/layout/list_sensors.xml
+++ b/app/src/main/res/layout/list_sensors.xml
@@ -6,18 +6,16 @@
 
     <TextView
         android:id="@+id/sensor_icon"
-        android:layout_width="?android:attr/listPreferredItemHeight"
+        android:layout_width="90dp"
         android:layout_height="match_parent"
-        android:layout_alignParentLeft="true"/>
+        android:layout_alignParentLeft="true"
+        android:textSize="40dp"/>
 
     <TextView
         android:id="@+id/sensor_text"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
+        android:layout_height="match_parent"
         android:layout_toRightOf="@id/sensor_icon"
-        android:singleLine="true"
-        android:textAppearance="?android:attr/textAppearanceMedium"
         android:textIsSelectable="false" />
 
 </LinearLayout>
