--- a/app/src/main/res/layout/content_control.xml
+++ b/app/src/main/res/layout/content_control.xml
@@ -15,6 +15,8 @@
     <ListView
         android:id="@+id/sensor_list"
         android:layout_width="fill_parent"
-        android:layout_height="fill_parent" />
+        android:layout_height="fill_parent"
+        android:divider="@null"
+        android:dividerHeight="0dp" />
 
 </LinearLayout>
