--- a/app/src/main/res/layout/list_sensors.xml
+++ b/app/src/main/res/layout/list_sensors.xml
@@ -1,21 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="160dp"
     android:orientation="horizontal">
 
     <TextView
         android:id="@+id/sensor_icon"
         android:layout_width="90dp"
-        android:layout_height="match_parent"
         android:layout_alignParentLeft="true"
-        android:textSize="40dp"/>
+        android:gravity="center|center_horizontal"
+        android:textSize="50dp"
+        android:paddingBottom="20dp"/>
 
     <TextView
+        android:gravity="center|center_horizontal"
+        android:text="qweqwe"
         android:id="@+id/sensor_text"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_toRightOf="@id/sensor_icon"
-        android:textIsSelectable="false" />
+        android:textIsSelectable="false"
+        android:textSize="30dp"
+        android:layout_gravity="center" />
 
 </LinearLayout>
