--- a/app/src/main/res/layout/list_sensors.xml
+++ b/app/src/main/res/layout/list_sensors.xml
@@ -7,6 +7,7 @@
     <TextView
         android:id="@+id/sensor_icon"
         android:layout_width="90dp"
+        android:layout_height="match_parent"
         android:layout_alignParentLeft="true"
         android:gravity="center|center_horizontal"
         android:textSize="50dp"
@@ -14,7 +15,6 @@
 
     <TextView
         android:gravity="center|center_horizontal"
-        android:text="qweqwe"
         android:id="@+id/sensor_text"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
