--- a/app/src/main/res/layout/content_air.xml
+++ b/app/src/main/res/layout/content_air.xml
@@ -12,4 +12,28 @@
     tools:context="com.ptappmovil.upiita.pt_appmovil.AirActivity"
     tools:showIn="@layout/activity_air">
 
+    <com.jesusm.holocircleseekbar.lib.HoloCircleSeekBar
+        android:id="@+id/air_picker"
+        android:layout_width="285dp"
+        android:layout_height="290dp"
+        app:max="100"
+        app:pointer_color="@color/colorPrimaryDark"
+        app:pointer_halo_color="#77030303"
+        app:pointer_size="20dp"
+        app:text_color="@color/black_overlay"
+        app:text_size="65sp"
+        app:wheel_unactive_color="@color/colorAccent"
+        app:wheel_active_color="@color/colorPrimary"
+        android:layout_centerVertical="true"
+        android:layout_centerHorizontal="true" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textSize="30dp"
+        android:id="@+id/air_text"
+        android:layout_marginBottom="32dp"
+        android:layout_above="@+id/air_picker"
+        android:layout_centerHorizontal="true" />
+
 </RelativeLayout>
