--- a/app/src/main/res/layout/content_access.xml
+++ b/app/src/main/res/layout/content_access.xml
@@ -1,15 +1,86 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
+    android:stretchColumns="0,1"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context="com.ptappmovil.upiita.pt_appmovil.AccessActivity"
     tools:showIn="@layout/activity_access">
 
-</RelativeLayout>
+    <TableRow
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:layout_gravity="center"
+        android:padding="5dp">
+
+        <TextView
+            android:id="@+id/window_status_label"
+            android:text="Ventana"
+            android:textSize="40dp"
+            android:layout_column="0"
+            android:layout_gravity="center_vertical" />
+
+        <ViewSwitcher
+            android:id="@+id/window_status_indicator"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_column="1"
+            android:layout_gravity="center_vertical">
+
+            <ImageView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
+                android:src="@drawable/wine_off" />
+
+            <ImageView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
+                android:src="@drawable/gold_on" />
+
+        </ViewSwitcher>
+
+    </TableRow>
+
+    <TableRow
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:padding="5dp">
+        <TextView
+            android:id="@+id/door_status_label"
+            android:text="Puerta"
+            android:textSize="40dp"
+            android:layout_column="0"
+            android:layout_gravity="center_vertical" />
+
+        <ViewSwitcher
+            android:id="@+id/door_status_indicator"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_column="1"
+            android:layout_gravity="center_vertical">
+
+            <ImageView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
+                android:src="@drawable/wine_off" />
+
+            <ImageView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
+                android:src="@drawable/gold_on" />
+
+        </ViewSwitcher>
+    </TableRow>
+
+
+
+
+</TableLayout>
