--- a/app/src/main/res/layout/activity_light.xml
+++ b/app/src/main/res/layout/activity_light.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:context="com.ptappmovil.upiita.pt_appmovil.LightActivity">
+    tools:context=".Activities.LightActivity">
 
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
