--- a/app/src/main/res/layout/content_access.xml
+++ b/app/src/main/res/layout/content_access.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:stretchColumns="0,1"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="com.ptappmovil.upiita.pt_appmovil.AccessActivity"
+    tools:context=".Activities.AccessActivity"
     tools:showIn="@layout/activity_access">
 
     <TableRow
