--- a/app/src/main/res/layout/content_air.xml
+++ b/app/src/main/res/layout/content_air.xml
@@ -9,7 +9,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="com.ptappmovil.upiita.pt_appmovil.AirActivity"
+    tools:context=".Activities.AirActivity"
     tools:showIn="@layout/activity_air">
 
     <com.jesusm.holocircleseekbar.lib.HoloCircleSeekBar
