--- a/app/src/main/res/layout/content_lock.xml
+++ b/app/src/main/res/layout/content_lock.xml
@@ -9,7 +9,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="com.ptappmovil.upiita.pt_appmovil.LockActivity"
+    tools:context=".Activities.LockActivity"
     tools:showIn="@layout/activity_lock">
 
     <Switch
