--- a/app/src/main/res/layout/list_services.xml
+++ b/app/src/main/res/layout/list_services.xml
@@ -5,6 +5,15 @@
     android:layout_height="match_parent"
     android:weightSum="1">
 
+    <TextView
+        android:id="@+id/dish_id"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:padding="5dp"
+        android:textSize="10dp"
+        android:textStyle="bold"
+        android:gravity="center_horizontal|center_vertical"/>
+
     <ImageView
         android:id="@+id/dish_image"
         android:layout_width="100dp"
@@ -13,7 +22,7 @@
 
     <TextView
         android:id="@+id/dish_name"
-        android:layout_width="160dp"
+        android:layout_width="150dp"
         android:layout_height="match_parent"
         android:padding="5dp"
         android:textSize="15dp"
