--- a/app/src/main/res/layout/list_services.xml
+++ b/app/src/main/res/layout/list_services.xml
@@ -14,12 +14,6 @@
         android:textStyle="bold"
         android:gravity="center_horizontal|center_vertical"/>
 
-    <ImageView
-        android:id="@+id/dish_image"
-        android:layout_width="100dp"
-        android:layout_height="100dp"
-        android:layout_gravity="center_vertical"/>
-
     <TextView
         android:id="@+id/dish_name"
         android:layout_width="150dp"
@@ -27,11 +21,12 @@
         android:padding="5dp"
         android:textSize="15dp"
         android:gravity="center_horizontal|center_vertical"
-        android:textStyle="italic"/>
+        android:textStyle="italic"
+        android:layout_weight="0.39" />
 
     <TextView
         android:id="@+id/dish_cost"
-        android:layout_width="match_parent"
+        android:layout_width="108dp"
         android:layout_height="match_parent"
         android:padding="5dp"
         android:textSize="18dp"
