--- a/app/src/main/res/layout/content_light.xml
+++ b/app/src/main/res/layout/content_light.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -8,32 +8,54 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
+    android:orientation="vertical"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context=".Activities.LightActivity"
-    tools:showIn="@layout/activity_light">
-
-    <com.jesusm.holocircleseekbar.lib.HoloCircleSeekBar
-        android:id="@+id/light_picker"
-        android:layout_width="285dp"
-        android:layout_height="290dp"
-        app:max="100"
-        app:pointer_color="@color/colorPrimaryDark"
-        app:pointer_halo_color="#77030303"
-        app:pointer_size="20dp"
-        app:text_color="@color/black_overlay"
-        app:text_size="65sp"
-        app:wheel_unactive_color="@color/colorAccent"
-        app:wheel_active_color="@color/colorPrimary"
-        android:layout_centerVertical="true"
-        android:layout_centerHorizontal="true" />
+    tools:showIn="@layout/activity_light"
+    android:weightSum="1">
 
     <TextView
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textSize="30dp"
+        android:text="Luminosidad:"
         android:id="@+id/light_text"
-        android:layout_marginBottom="32dp"
         android:layout_above="@+id/light_picker"
-        android:layout_centerHorizontal="true" />
+        android:layout_centerHorizontal="true"
+        android:textAlignment="center"
+        android:layout_marginBottom="30dp" />
 
-</RelativeLayout>
+    <TextView
+        android:id="@+id/textview1"
+        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:gravity="center"
+        android:text="Selecciona la intensidad de las luces"
+        android:textSize="20dp"
+        android:layout_marginBottom="60dp" />
+
+    <Button
+        android:text="Apagar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/btn_off" />
+
+    <Button
+        android:text="Tenue"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/btn_weak" />
+
+    <Button
+        android:text="Medio"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/btn_medium" />
+
+    <Button
+        android:text="Alto"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/btn_high" />
+
+</LinearLayout>
