--- a/app/src/main/res/layout/content_light.xml
+++ b/app/src/main/res/layout/content_light.xml
@@ -22,6 +22,15 @@
         android:id="@+id/light_text"
         android:layout_above="@+id/light_picker"
         android:layout_centerHorizontal="true"
+        android:textAlignment="center" />
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textSize="30dp"
+        android:text="Nivel:"
+        android:id="@+id/preset_text"
+        android:layout_above="@+id/light_picker"
+        android:layout_centerHorizontal="true"
         android:textAlignment="center"
         android:layout_marginBottom="30dp" />
 
