--- a/app/src/main/res/layout/content_service.xml
+++ b/app/src/main/res/layout/content_service.xml
@@ -1,86 +1,47 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="com.ptappmovil.upiita.pt_appmovil.Activities.ServiceActivity"
-    tools:showIn="@layout/activity_service">
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:paddingBottom="@dimen/activity_vertical_margin"
+        android:paddingLeft="@dimen/activity_horizontal_margin"
+        android:paddingRight="@dimen/activity_horizontal_margin"
+        android:paddingTop="@dimen/activity_vertical_margin"
+        app:layout_behavior="@string/appbar_scrolling_view_behavior"
+        tools:context="com.ptappmovil.upiita.pt_appmovil.Activities.ServiceActivity"
+        tools:showIn="@layout/activity_service">
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Selecciona los platillos que deseas"
+        android:textAlignment="center"
+        android:textSize="18sp"/>
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="$0.00MXN"
+        android:textAlignment="center"
+        android:layout_marginBottom="20dp"
+        android:textSize="20sp"
+        android:id="@+id/order_label" />
 
     <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:scrollbars="vertical"
-        android:fillViewport="true">
-
+        android:layout_height="335dp"
+        android:layout_marginBottom="20dp">
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:orientation="vertical">
-
-            <TextView
-                android:id="@+id/service_header"
-                android:text="Tu Orden: $0.00"
-                android:textSize="20sp"
-                android:textStyle="bold"
-                android:layout_marginBottom="10dp"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:gravity="center_vertical|center_horizontal"/>
-
-
-            <ScrollView
-                android:layout_width="match_parent"
-                android:layout_height="130dp"
-                android:scrollbars="vertical"
-                android:fillViewport="true">
-
-                <TextView
-                    android:id="@+id/service_list_label"
-                    android:text=""
-                    android:textSize="15sp"
-                    android:textStyle="normal"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:padding="5dp"
-                    android:lineSpacingExtra="3dp"
-                    android:background="@drawable/tv_border"/>
-
-            </ScrollView>
-
-
-            <TextView
-                android:id="@+id/service_menu_header"
-                android:text="Para escoger"
-                android:textSize="20sp"
-                android:textStyle="bold"
-                android:layout_marginTop="20dp"
-                android:layout_marginBottom="10dp"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:gravity="center_vertical|center_horizontal"/>
-
-            <ListView
-                android:layout_width="match_parent"
-                android:layout_height="180dp"
-                android:id="@+id/service_listview"
-                android:layout_gravity="center_vertical" />
-
-            <Button
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="8dp"
-                android:text="Ordenar"
-                android:gravity="center_vertical|center_horizontal"
-                android:onClick="makeOrder"/>
+            android:orientation="vertical"
+            android:id="@+id/content_service">
 
         </LinearLayout>
-
     </ScrollView>
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Realizar Pedido"
+        android:onClick="placeOrder" />
 </LinearLayout>
