--- a/app/src/main/res/layout/content_light.xml
+++ b/app/src/main/res/layout/content_light.xml
@@ -14,26 +14,43 @@
     tools:showIn="@layout/activity_light"
     android:weightSum="1">
 
-    <TextView
+    <TableLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textSize="30dp"
-        android:text="Luminosidad:"
-        android:id="@+id/light_text"
-        android:layout_above="@+id/light_picker"
-        android:layout_centerHorizontal="true"
-        android:textAlignment="center" />
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:textSize="30dp"
-        android:text="Nivel:"
-        android:id="@+id/preset_text"
-        android:layout_above="@+id/light_picker"
-        android:layout_centerHorizontal="true"
-        android:textAlignment="center"
-        android:layout_marginBottom="30dp" />
+        android:shrinkColumns="*">
+        <TableRow>
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textSize="30dp"
+                android:text="Luminosidad:        "
+                android:id="@+id/light_text"
+                android:layout_above="@+id/light_picker"
+                android:layout_centerHorizontal="true"
+                android:textAlignment="center"
+                android:layout_column="0"/>
 
+            <Button
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_column="1"
+                android:text="Actualizar"
+                android:id="@+id/btn_refresh"/>
+        </TableRow>
+        <TableRow>
+                <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textSize="30dp"
+                android:text="Nivel:"
+                android:id="@+id/preset_text"
+                android:layout_above="@+id/light_picker"
+                android:layout_centerHorizontal="true"
+                android:textAlignment="center"
+                android:layout_marginBottom="30dp"
+                android:layout_column="0"/>
+        </TableRow>
+    </TableLayout>
     <TextView
         android:id="@+id/textview1"
         android:layout_height="wrap_content"
